<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardRowWarung"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    app:cardBackgroundColor="#FFFFFF"
    android:elevation="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivWarung"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/tvWarungName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_store"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/nama_warung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivWarung"
            app:layout_constraintTop_toTopOf="@id/ivWarung" />


        <TextView
            android:id="@+id/tvWarungAdress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_map_black"
            android:gravity="center_vertical"
            android:drawablePadding="8dp"
            android:text="@string/alamat_warung"
            app:layout_constraintEnd_toEndOf="@id/tvWarungName"
            app:layout_constraintStart_toStartOf="@id/tvWarungName"
            app:layout_constraintTop_toBottomOf="@id/tvWarungName" />

        <TextView
            android:id="@+id/tvCordinate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_location_black"
            android:gravity="center_vertical"
            android:drawablePadding="8dp"
            android:text="@string/kordinat"
            app:layout_constraintEnd_toEndOf="@+id/tvWarungAdress"
            app:layout_constraintStart_toStartOf="@id/tvWarungAdress"
            app:layout_constraintTop_toBottomOf="@id/tvWarungAdress" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>